# emscripten-pasmo

./: .gitignore  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
docs/: GPLv3 permission.eml  index.html  style.css
src/: pasmo.cpp  pasmo.cxx  post.js  pre.js
test/: pasmo.test.js
